--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -18,6 +18,17 @@
         android:scaleType="fitCenter"
      />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/like"
+        android:src="@drawable/ic_unpressed_like"
+        android:layout_marginTop="@dimen/vsmall_margin"
+        android:layout_marginEnd="@dimen/vsmall_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/item_img"
+        app:layout_constraintEnd_toEndOf="@id/item_img"/>
+
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_card"
         android:layout_width="match_parent"
