--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/AppToolbar"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/toolbar_height"
-    android:minHeight="62dp"
-    app:elevation="0dp"
-    app:layout_constraintTop_toTopOf="parent">
+    android:gravity="center_vertical"
 
+    app:titleMarginStart="0dp"
+    app:contentInsetStart="0dp"
+    app:contentInsetStartWithNavigation="0dp"
 
-</Toolbar>
+    app:titleMarginBottom="20dp"
+
+    android:elevation="0dp"
+    app:titleTextColor="@color/background">
+
+</androidx.appcompat.widget.Toolbar>
