second activity completed

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -11,13 +11,18 @@
         layout="@layout/toolbar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/body"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/tool_mmargin"
         android:background="@drawable/layout_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/menu_tools"
         app:layout_constraintTop_toTopOf="parent"
-        android:padding="@dimen/vsmall_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="@dimen/vsmall_margin"
+        android:paddingStart="@dimen/vsmall_margin"
+        android:paddingEnd="@dimen/vsmall_margin"
         >
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -83,5 +88,49 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/menu_tools"
+
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@drawable/shadow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/body"
+        android:gravity="center_vertical"
+        android:foregroundGravity="center_vertical"
+        android:paddingTop="@dimen/vsmall_margin">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_home"
+            android:tint="@color/menu"
+            android:layout_weight="1"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_magnify"
+            android:tint="@color/menu"
+            android:layout_weight="1"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_purchases"
+            android:tint="@color/menu"
+            android:layout_weight="1"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_user"
+            android:tint="@color/menu"
+            android:layout_weight="1"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
