--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="background">@android:color/white</color>
     <color name="black">@android:color/black</color>
     <color name="header">#A3A5AD</color>
+    <color name="menu">#BEBFC4</color>
 
 
 </resources>
