--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -82,9 +82,9 @@
             android:id="@+id/rv_recycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/tool_mmargin"
+            android:layout_marginTop="@dimen/vvsmall_margin"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/line" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
