--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,12 +10,26 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="DropDownMenu" parent="Widget.AppCompat.Spinner">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:popupBackground">#DFFFFFFF</item>
+    </style>
+
+    <style name="AppTheme." parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="android:background">@android:color/white</item>
+    </style>
+
     <style name="AppToolbar" parent="Widget.AppCompat.Toolbar">
         <item name="android:background">@color/toolbar_fill</item>
         <item name="android:fontFamily">@font/raleway</item>
         <item name="android:textSize">16sp</item>
         <item name="android:titleTextColor">@color/background</item>
-
     </style>
     
     <style name="bottom_tag" >
