--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -3,21 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/tool_smargin"
     android:layout_marginStart="@dimen/vsmall_margin"
     android:layout_marginEnd="@dimen/vsmall_margin"
+    android:layout_marginBottom="@dimen/tool_smargin"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_img"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:src="@drawable/img_1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-     />
-
+        android:scaleType="fitCenter"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/like"
@@ -32,11 +31,10 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_card"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/raleway"
         app:layout_constraintTop_toBottomOf="@id/item_img"
-        app:layout_constraintStart_toStartOf="@id/item_img"
         android:text="Scardian dress"
         android:textSize="16sp"
         android:textAlignment="viewStart"
@@ -51,7 +49,7 @@
         android:text="$ 50.00"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/vvsmall_margin"
-        app:layout_constraintStart_toStartOf="@id/item_img"
+        app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintTop_toBottomOf="@id/title_card" />
 
@@ -76,7 +74,7 @@
         android:orientation="horizontal"
         android:gravity="clip_horizontal"
         app:layout_constraintTop_toBottomOf="@id/price"
-        app:layout_constraintStart_toStartOf="@id/item_img"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/vsmall_margin"
         >
         <androidx.appcompat.widget.AppCompatImageView
@@ -131,7 +129,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/reviews"
-        app:layout_constraintStart_toStartOf="@id/item_img"
+        app:layout_constraintStart_toStartOf="parent"
         android:textColor="@color/alert"
         android:text="Remain: 2 days 2 hours"
         android:layout_marginTop="@dimen/vsmall_margin"
