--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
     <color name="black">@android:color/black</color>
     <color name="header">#A3A5AD</color>
     <color name="menu">#BEBFC4</color>
-
+    <color name="text">#1D1F22</color>
 
 </resources>
