--- a/app/src/main/res/drawable/spinner_border.xml
+++ b/app/src/main/res/drawable/spinner_border.xml
@@ -5,7 +5,7 @@
             <stroke android:width="2dp" android:color="#F1F2F3" />
             <padding android:bottom="3dp" android:left="3dp" android:right="12dp" android:top="3dp" />
         </shape></item>
-        <item ><bitmap android:gravity="right|center" android:src="@drawable/vector" />
+        <item ><bitmap android:gravity="right|center" android:src="@drawable/spinner" />
         </item>
     </layer-list></item>
 </selector>
