--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -12,47 +12,15 @@
         layout="@layout/toolbar" />
 
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <include
         android:id="@+id/menu_tools"
-        android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="@drawable/shadow"
-        android:foregroundGravity="center_vertical"
-        android:gravity="center_vertical"
-        android:paddingTop="@dimen/vsmall_margin"
+        android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/body">
+        app:layout_constraintTop_toBottomOf="@id/body"
+        layout="@layout/bottom_menu"
+        />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_home"
-            android:tint="@color/menu" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_magnify"
-            android:tint="@color/menu" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_purchases"
-            android:tint="@color/menu" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-
-            android:layout_width="wrap_content"
-            android:layout_height="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_user"
-            android:tint="@color/menu" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/body"
