--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -14,106 +14,101 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/tool_mmargin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fillViewport="true"
         android:scrollIndicators="right"
         android:scrollbarStyle="insideOverlay"
-        android:fillViewport="true"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:background="@drawable/layout_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/menu_tools1">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="800dp"
-            android:background="@drawable/layout_bg"
-            android:paddingStart="@dimen/vvsmall_margin"
-            android:paddingTop="@dimen/vvsmall_margin"
-            android:paddingEnd="@dimen/vvsmall_margin">
+            android:padding="@dimen/vsmall_margin"
+            android:paddingTop="@dimen/vsmall_margin">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/avatar"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:maxHeight="700dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/vsmall_margin"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/title_card"
-                app:layout_constraintVertical_chainStyle="packed"
+                android:minHeight="540dp"
                 android:src="@drawable/img_1"
-                />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title_card"
-                android:layout_width="wrap_content"
+                android:textColor="?attr/colorAccent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/raleway"
-                app:layout_constraintTop_toBottomOf="@id/avatar"
-                app:layout_constraintBottom_toTopOf="@id/price"
-                app:layout_constraintStart_toStartOf="@id/avatar"
-                android:text="Scardian dress"
-                android:textSize="16sp"
-                android:textAlignment="viewStart"
-                android:layout_marginStart="@dimen/vsmall_margin"
+                android:layout_marginTop="@dimen/vsmall_margin"
                 android:layout_marginBottom="@dimen/vsmall_margin"
-                />
+                android:ellipsize="end"
+                android:fontFamily="@font/raleway"
+                android:maxLines="1"
+                android:text="Scardian dress"
+                android:textAlignment="viewStart"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@id/avatar"
+                app:layout_constraintTop_toBottomOf="@id/avatar" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/price"
+                android:textColor="?attr/colorAccent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vsmall_margin"
                 android:fontFamily="@font/roboto"
-                android:textSize="16sp"
                 android:text="$ 50.00"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/title_card"
-                app:layout_constraintTop_toBottomOf="@id/title_card"
                 app:layout_constraintBottom_toTopOf="@id/stars"
-                android:layout_marginBottom="@dimen/vsmall_margin"/>
+                app:layout_constraintStart_toStartOf="@id/title_card"
+                app:layout_constraintTop_toBottomOf="@id/title_card" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/crossed_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
-                android:textSize="12sp"
-                android:text="@string/crossed"
                 android:layout_marginStart="@dimen/vsmall_margin"
-                app:layout_constraintTop_toTopOf="@id/price"
                 android:layout_marginTop="@dimen/vvsmall_margin"
+                android:fontFamily="@font/roboto"
+                android:text="@string/crossed"
                 android:textColor="@color/minor"
+                android:textSize="12sp"
+                android:visibility="visible"
                 app:layout_constraintStart_toEndOf="@id/price"
-                android:visibility="visible" />
+                app:layout_constraintTop_toTopOf="@id/price" />
 
             <LinearLayout
                 android:id="@+id/stars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/vsmall_margin"
                 android:gravity="clip_horizontal"
-                app:layout_constraintTop_toBottomOf="@id/price"
+                android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="@id/title_card"
-                app:layout_constraintBottom_toTopOf="@id/alert"
-                android:layout_marginBottom="@dimen/vsmall_margin"
-                >
+                app:layout_constraintTop_toBottomOf="@id/price">
+
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/star_1"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/ic_star"
-                    />
+                    android:src="@drawable/ic_star" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/star_2"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/ic_star"
-                    />
+                    android:src="@drawable/ic_star" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/star_3"
@@ -131,8 +126,7 @@
                     android:id="@+id/star_5"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/ic_star"
-                    />
+                    android:src="@drawable/ic_star" />
 
             </LinearLayout>
 
@@ -141,54 +135,185 @@
                 android:id="@+id/reviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(80)"
-                android:textSize="14sp"
                 android:gravity="center"
+                android:text="(80)"
+                android:textColor="?attr/colorAccent"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@id/stars"
-                app:layout_constraintStart_toEndOf="@id/stars"
-                />
+                app:layout_constraintStart_toEndOf="@id/stars" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/alert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/reviews"
-                app:layout_constraintStart_toStartOf="@id/title_card"
-                app:layout_constraintBottom_toTopOf="@id/spinner1"
-                android:textColor="@color/alert"
+                android:layout_marginTop="@dimen/vsmall_margin"
                 android:text="Remain: 2 days 2 hours"
+                android:textColor="@color/alert"
                 android:visibility="visible"
-                android:layout_marginBottom="@dimen/vsmall_margin"
-                />
+                app:layout_constraintStart_toStartOf="@id/title_card"
+                app:layout_constraintTop_toBottomOf="@id/reviews" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner1"
+                style="@style/DropDownMenuTop"
                 android:layout_width="0dp"
-                app:layout_constraintTop_toBottomOf="@id/alert"
-                app:layout_constraintBottom_toTopOf="@id/spinner2"
-                app:layout_constraintStart_toStartOf="@id/title_card"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/vsmall_margin"
                 android:spinnerMode="dropdown"
-                style="@style/DropDownMenu"
-                android:layout_marginBottom="@dimen/vsmall_margin"
-                />
+                android:minHeight="@dimen/button_tool"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/title_card"
+                app:layout_constraintTop_toBottomOf="@id/alert" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner2"
+                style="@style/DropDownMenuTop"
                 android:layout_width="0dp"
-                app:layout_constraintTop_toBottomOf="@id/spinner1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/title_card"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/vsmall_margin"
                 android:spinnerMode="dropdown"
-                style="@style/DropDownMenu"
-                android:layout_marginBottom="@dimen/vsmall_margin"
+                android:minHeight="@dimen/button_tool"
+                app:layout_constraintEnd_toEndOf="@id/spinner1"
+                app:layout_constraintStart_toStartOf="@id/title_card"
+                app:layout_constraintTop_toBottomOf="@id/spinner1" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addButton"
+                style="@style/Button"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_tool"
+                android:layout_marginTop="@dimen/tool_smargin"
+                android:text="@string/add_to_cart"
+                app:layout_constraintStart_toStartOf="@id/title_card"
+                app:layout_constraintTop_toBottomOf="@id/spinner2"
+                app:layout_constraintWidth_percent="0.78"
+                android:clickable="true"
+                android:focusable="true"/>
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinner3"
+                style="@style/DropDownMenuButton"
+                android:layout_width="0dp"
+                android:minHeight="@dimen/button_tool"
+                android:spinnerMode="dropdown"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/addButton"
+                app:layout_constraintWidth_percent="0.2" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/desc"
+                android:textColor="?attr/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/title_card"
+                app:layout_constraintTop_toBottomOf="@id/addButton"
+                android:layout_marginTop="@dimen/tool_smargin"
+                android:text="@string/description"
+                android:fontFamily="@font/raleway"
+                android:textSize="16sp" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/expand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/spinner"
+                android:layout_marginEnd="@dimen/vsmall_margin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/desc"
+                app:layout_constraintBottom_toBottomOf="@id/desc" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/line1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_line"
+                android:layout_marginTop="@dimen/vsmall_margin"
+                app:layout_constraintTop_toBottomOf="@id/desc"
+                android:visibility="invisible"
                 />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/desc_tab"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/line1"
+                app:layout_constraintStart_toStartOf="@id/desc"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/desc_text"
+                    android:textColor="?attr/colorAccent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/raleway"
+                    android:textSize="14sp"
+                    android:text="@string/desc" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/code_dress"
+                    android:textColor="?attr/colorAccent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/raleway"
+                    android:textSize="12sp"
+                    android:layout_marginTop="@dimen/tool_smargin"
+                    android:text="Product Code: 43434-10"
+                    />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/category_dress"
+                    android:textColor="?attr/colorAccent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/raleway"
+                    android:textSize="12sp"
+                    android:layout_marginTop="@dimen/vsmall_margin"
+                    android:text="Category: sweatwear"
+                    />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/material_dress"
+                    android:textColor="?attr/colorAccent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/raleway"
+                    android:textSize="12sp"
+                    android:layout_marginTop="@dimen/vsmall_margin"
+                    android:text="Material: Cotton"
+                    />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/country_dress"
+                    android:textColor="?attr/colorAccent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/raleway"
+                    android:textSize="12sp"
+                    android:layout_marginTop="@dimen/vsmall_margin"
+                    android:text="Country: Germany"
+                    />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/line2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_line"
+                    android:layout_marginTop="@dimen/vsmall_margin"
+                    />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
 
+    <include
+        android:id="@+id/menu_tools1"
+        android:layout_height="55dp"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/scrollView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        layout="@layout/bottom_menu"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
