--- a/app/src/main/res/layout/fragment_template.xml
+++ b/app/src/main/res/layout/fragment_template.xml
@@ -64,7 +64,9 @@
         android:layout_marginEnd="@dimen/tool_smargin"
         android:layout_marginBottom="@dimen/tool_smargin"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="?attr/selectableItemBackground"/>
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?android:attr/selectableItemBackground"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
