--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,15 +4,30 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlNormal">@android:color/darker_gray</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorAccent">@color/text</item>
     </style>
 
-    <style name="DropDownMenu" parent="Widget.AppCompat.Spinner">
+    <style name="Button" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@color/toolbar_fill</item>
+        <item name="android:fontFamily">@font/raleway</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="DropDownMenuTop" parent="Widget.AppCompat.Spinner">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/spinner_border</item>
+        <item name="android:fontFamily">@font/raleway</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="DropDownMenuButton" parent="Widget.AppCompat.Spinner">
+        <item name="android:layout_height">@dimen/button_tool</item>
+        <item name="android:background">@drawable/spinner_border</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="AppTheme." parent="Theme.AppCompat.DayNight.DarkActionBar">
