--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="vvsmall_margin">7dp</dimen>
     <dimen name="toolbar_height">60dp</dimen>
     <dimen name="button_tool">50dp</dimen>
+    <dimen name="circle_num_size">12sp</dimen>
 </resources>
