--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,11 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <style name="AppThemeLogin" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:fontFamily">@font/raleway</item>
+    </style>
+
     <style name="AppToolbar" parent="Widget.AppCompat.Toolbar">
         <item name="android:background">@color/toolbar_fill</item>
         <item name="android:fontFamily">@font/raleway</item>
